--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,7 +1,4 @@
-.nav-enlace {
-    padding: 10px 30px;
-    margin: 0px;
-    background-color: rgb(97, 28, 177);
-    display: flex;
+Nav {
+    margin: 0%;
+    padding: 0%;
 }
-
